dist/tests/tipe-data.test.js
"use strict";
describe('Data Type', function () {
    it('should must desclare', function () {
        let name = 'Muhammad Zuhair Hamzah';
        let balance = 10000;
        let isTrue = true;
        console.info(name);
        console.info(balance);
        console.info(isTrue);
        // name = 100; //error
        // number = "ok"; //error
        // isTrue = 100; //error
    });
});
